--- a/Tensorflow快速入门与实战.ipynb
+++ b/Tensorflow快速入门与实战.ipynb
@@ -7283,7 +7283,7 @@
     "# mean_squared_error/mean_absolute_error/mean_absolute_percentage_error/mean_squared_logarithmic_error/\n",
     "# squared_hinge/hinge/categorical_hinge/logcosh/categorical_crossentropy/sparse_categorical_crossentropy/\n",
     "# binary_crossentropy/kullback_leibler_divergence/poisson/cosine_proximity\n",
-    "LOSS = 'mean_squared_error'\n",
+    "LOSS = 'binary_crossentropy'\n",
     "\n",
     "MODEL_DIR = './captcha/model/train_loss_demo/'\n",
     "MODEL_FORMAT = '.h5'\n",
@@ -7302,9 +7302,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 将 RGB 验证码图像转为灰度图"
    ]
@@ -7316,8 +7314,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-20T13:31:16.065622Z",
      "start_time": "2020-04-20T13:31:16.063596Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -7329,9 +7326,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 对验证码中每个字符进行 one-hot 编码"
    ]
@@ -7343,8 +7338,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-20T13:31:17.924851Z",
      "start_time": "2020-04-20T13:31:17.920820Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -7366,9 +7360,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 将验证码向量解码为对应字符"
    ]
@@ -7380,8 +7372,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-20T13:31:19.299802Z",
      "start_time": "2020-04-20T13:31:19.295804Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -7397,9 +7388,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 适配 Keras 图像数据格式"
    ]
@@ -7411,8 +7400,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-20T13:31:21.242979Z",
      "start_time": "2020-04-20T13:31:21.238960Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -7671,8 +7659,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-20T12:12:50.659946Z",
      "start_time": "2020-04-20T12:12:50.656935Z"
-    },
-    "heading_collapsed": true
+    }
    },
    "source": [
     "### 查看模型摘要"
@@ -7685,8 +7672,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-20T13:27:27.061883Z",
      "start_time": "2020-04-20T13:27:27.056885Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -7744,9 +7730,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 模型可视化"
    ]
@@ -7758,8 +7742,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-20T13:26:39.825865Z",
      "start_time": "2020-04-20T13:26:39.642249Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -8714,7 +8697,7 @@
    "metadata": {},
    "source": [
     "### 学习率调整\n",
-    "![](http://a1.qpic.cn/psc?/V13yhdiD201uKI/jKwCg1C7YRUNu7w0Ty5ry3.v4EXPj*pGbPmBIDuzHiRWIOPR1KfgN7mectO3b1Tg*Ur2j0rueAgNxFUSDazCeQ!!/b&ek=1&kp=1&pt=0&bo=vAYhAwAAAAADN4o!&tl=1&vuin=605137668&tm=1587391200&sce=60-1-1&rf=viewer_4)"
+    "![](./images/学习率调整.png)"
    ]
   },
   {
